Removeu required de campos contato

--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -205,7 +205,7 @@
             </div>
             <div class="col-sm-2">                    
                 <div class="form-group" >                
-                    <label for="" class="required">{{form.contato1.label}} </label>        
+                    <label for="" >{{form.contato1.label}} </label>        
                     {% render_field form.contato1 class="form-control phone-mask"  type="text"%}
                 </div>
             </div>
@@ -217,7 +217,7 @@
             </div>
             <div class="col-sm-2">                    
                 <div class="form-group" >                
-                    <label for="" class="required">{{form.celular1.label}} </label>        
+                    <label for="" >{{form.celular1.label}} </label>        
                     {% render_field form.celular1 class="form-control cel-phone-mask" type="text"%}
                     <label class="checkbox-inline"> {{form.whatsapp1.label}} <input type="checkbox" value="whatsapp1" id="whatsapp1" name="whatsapp1"></label>
                 </div>
