--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -192,7 +192,7 @@
         <div class="row"> 
             <div class="col-sm-2">                    
                 <div class="form-group" >                
-                    <label for="" class="required">{{form.contato1.label}} </label>        
+                    <label for="" >{{form.contato1.label}} </label>        
                     {% render_field form.contato1 class="form-control phone-mask"  type="text"%}
                 </div>
             </div>
@@ -204,7 +204,7 @@
             </div>
             <div class="col-sm-2">                    
                 <div class="form-group" >                
-                    <label for="" class="required">{{form.celular1.label}} </label>        
+                    <label for="" >{{form.celular1.label}} </label>        
                     {% render_field form.celular1 class="form-control cel-phone-mask" type="text"%}
                     <label class="checkbox-inline"> {{form.whatsapp1.label}} <input type="checkbox" value="whatsapp1" id="whatsapp1" name="whatsapp1"></label>
                 </div>
@@ -218,7 +218,7 @@
             </div>   
             <div class="col-sm-6">                    
                 <div class="form-group" >                
-                    <label for="" class="required" >{{form.email.label}} </label>        
+                    <label for=""  >{{form.email.label}} </label>        
                     {% render_field form.email class="form-control lower_all" %}
                 </div>
             </div>          
