Coreção de texto em promissoria

--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -358,7 +358,7 @@ window.onload = function imprimir_promissoria(){
 
                 <div class="fontmenor emissao2" style="text-align:center"> 
                     ___________________________<br>
-                    ASSINATURA DO EMITENTEoi
+                    ASSINATURA DO EMITENTE
                 </div>   
             </a> 
         </div>    
