Ajuste do telefone do contrato

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -286,7 +286,7 @@ window.onload = function imprimir(){
     var cnpj_cidade          = "{{object.cliente_cnpj.cidade}}"
     var cnpj_uf              = "{{object.cliente_cnpj.uf}}"
     var cnpj_numero_casa     = "{{object.cliente_cnpj.numero_casa}}"
-    var cnpj_contato1        = "{{object.cliente_cnpj.contato1}}"
+    var cnpj_celular1        = "{{object.cliente_cnpj.celular1}}"
     var cnpj_email           = "{{object.cliente_cnpj.email}}"
 
     //VARIÁVEIS DO CLIENTE CNPJ(REPRESENTANTE)
@@ -633,7 +633,7 @@ window.onload = function imprimir(){
             Nome/Razão Social: ${razao_social},
             CNPJ: ${cnpj},
             Endereço: ${cnpj_rua}, ${cnpj_numero_casa}, ${cnpj_bairro}, ${cnpj_cidade}-${cnpj_uf} CEP: ${cnpj_cep},
-            Telefone: ${cnpj_contato1},
+            Telefone: ${cnpj_celular1},
             E-mail: ${cnpj_email} 
         </div>
 
