--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -14,21 +14,27 @@
     
     /* Style the tab */
     .tab {
-      overflow: hidden;
-      border: 1px solid #ccc;
-      background-color: #f1f1f1;
+        overflow: hidden;
+        border: 1px solid #ccc;
+        background-color: #f1f1f1;
+        border-top: 0px;
+        position:fixed;
+        z-index: 2;
+        width:inherit;
+        top: 53px;
+        width: 1109px;
     }
     
     /* Style the buttons inside the tab */
     .tab button {
-      background-color: inherit;
-      float: left;
-      border: none;
-      outline: none;
-      cursor: pointer;
-      padding: 14px 16px;
-      transition: 0.3s;
-      font-size: 17px;
+        background-color: inherit;
+        float: left;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        padding: 14px 16px;
+        transition: 0.3s;
+        font-size: 17px;
     }
     
     /* Change background color of buttons on hover */
@@ -44,9 +50,12 @@
     /* Style the tab content */
     .tabcontent {
       display: none;
-      padding: 6px 12px;
+      padding: 6px 12px;  
+      position:fixed;     
       border: 1px solid #ccc;
       border-top: none;
+      top: 100px;
+      width: 1109px;
       -webkit-animation: fadeEffect 1s;
     }
     /* Fade in tabs */
@@ -63,11 +72,15 @@
 
    <!-- https://www.schoolofnet.com/forum/topico/como-enviar-a-mensagem-de-sucesso-ou-erro-para-o-formulario-8495 -->    
 
-    <div class="tab">
-        <button class="tablinks active" onclick="openCity(event, 'Page1')">Dados Pessoais</button>
-        <button class="tablinks" onclick="openCity(event, 'Page2')">Dados do Local de Trabalho</button>
-        <button class="tablinks" onclick="openCity(event, 'Page3')">Dados Bancários</button>
-        <button class="tablinks" onclick="openCity(event, 'Page4')">Referências e Observações</button>
+    <div class="row" >
+        <div class="col-sm-12">
+            <div class="tab">
+                <button class="tablinks active" onclick="openCity(event, 'Page1')">Dados Pessoais</button>
+                <button class="tablinks" onclick="openCity(event, 'Page2')">Dados do Local de Trabalho</button>
+                <button class="tablinks" onclick="openCity(event, 'Page3')">Dados Bancários</button>
+                <button class="tablinks" onclick="openCity(event, 'Page4')">Referências e Observações</button>
+            </div>
+        </div>
     </div>
     
     <div id="Page1" class="tabcontent" style="display:block">
