Ajuste do telefone do contrato++

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -624,7 +624,7 @@ window.onload = function imprimir(){
             Endereço:   Av. das Fronteiras, 1287, Bairro: Nsa Sra da Apresentação, 
             Cidade: Natal RN- 
             CEP:  59114-275
-            Telefone: (84)99946-19962
+            Telefone: (84)9 9946-19962
             E-mail: esctoprn@gmail.com            
         </div>
 
