--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -55,6 +55,69 @@ input {
   text-transform: lowercase;
 }
 
+/* STYLE DE CONTENT E TABS DOS TEMPLATES DE CADASTRO */
+body {font-family: Arial;}
+    
+h3{
+  background-color: #4CAF50;
+  color: rgb(255, 255, 255)          
+}   
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+  border-top: 0px;
+  position:fixed;
+  z-index: 2;        
+  top: 53px;
+  width: 1109px;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;    
+  margin-top: 45px;  
+  -webkit-animation: fadeEffect 1s;
+}
+/* Fade in tabs */
+@-webkit-keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeEffect {
+    from {opacity: 0;}
+    to {opacity: 1;}
+} 
+/* STYLE DE CONTENT E TABS DOS TEMPLATES DE CADASTRO */
+
   
 </style>
   <!-- MEUS CSS -->  
