--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -1,14 +1,8 @@
 {% extends "base.html" %}
 {% load widget_tweaks %}
-
+{% block js %}{% endblock js %}
 {% block content %}
 
-<style>
-    h3{
-        background-color: #4CAF50;
-        color: rgb(255, 255, 255)          
-    }      
-</style>
 
 <form action="{% url 'avalista:avalista_add' %}" method="post">
     {% csrf_token %}    
