Cadastro de fiador estava redirecionando para ele mesmo

--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -41,7 +41,7 @@ label {
   margin-bottom: 0px;
 }   
 input {
-  text-transform: capitalize; 
+  text-transform: uppercase; 
 }
 /* apenas primeira letra maiuscula */
 .maiusculo {
@@ -120,10 +120,10 @@ h3{
 
   
 </style>
-  <!-- MEUS CSS -->  
+<!-- MEUS CSS -->  
+
 </head>
 <body>
-
 
 {% include "includes/nav.html" %}
 
