--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -45,7 +45,7 @@
         <div class="col-sm-2">
             <div class="form-group" >                
                 <label for="" class="required">{{form.orgao_emissor.label}} </label>        
-                {% render_field form.orgao_emissor class="form-control upper_all" %}
+                {% render_field form.orgao_emissor class="form-control" %}
             </div>
         </div>
 
