--- a/projeto/avalista/templates/avalista_form.html
+++ b/projeto/avalista/templates/avalista_form.html
@@ -58,12 +58,21 @@
                 {% render_field form.fiador_naturalidade  class="form-control" %}
             </div>    
         </div> 
-        <div class="col-sm-3">                    
-            <div class="form-group" >                
-                <label for="" >{{form.fiador_data_nasc.label}} </label>        
-                {% render_field form.fiador_data_nasc  class="form-control" type="date" %}
-            </div>    
-        </div> 
+        {% if avalista %}
+            <div class="col-sm-3">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.fiador_data_nasc.label}} </label>        
+                    {% render_field form.fiador_data_nasc  class="form-control" type="text" %}
+                </div>    
+            </div>     
+        {% else %}
+            <div class="col-sm-3">                    
+                <div class="form-group" >                
+                    <label for="" >{{form.fiador_data_nasc.label}} </label>        
+                    {% render_field form.fiador_data_nasc  class="form-control" type="date" %}
+                </div>    
+            </div>             
+        {% endif %}
     </div> 
     <hr>
         <h3>CONTATO</h3>               
