Avalista detail sendo padronizado

--- a/projeto/cliente_cnpj/templates/cliente_cnpj_detail.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_detail.html
@@ -21,7 +21,8 @@
             <label>Razão Social</label>
             <input  value="{{ object.razao_social }}" readonly class="form-control">
         </div>
-    </div><div class="col-sm-6"> 
+    </div>
+    <div class="col-sm-6"> 
         <div class="form-group">
             <label>Nome Fantasia</label>
             <input  value="{{ object.nome_fantasia }}" readonly class="form-control">
