--- a/projeto/avalista/templates/avalista_detail.html
+++ b/projeto/avalista/templates/avalista_detail.html
@@ -17,8 +17,8 @@
 <div class="row">       
     <div class="col-sm-6"> 
         <div class="form-group">
-            <label>Razão Social</label>
-            
+            <label>Nome</label>
+            <input  value="{{ object.fiador_nome }}" readonly class="form-control">
         </div>
     </div>
     
