Nacionalidade setado padrão em todos templates

--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -80,7 +80,7 @@
         <div class="col-sm-3">
             <div class="form-group">
                 <label for="" class="required">{{form.nacionalidade.label}}</label>
-                {% render_field form.nacionalidade class="form-control" %}
+                {% render_field form.nacionalidade class="form-control" value="BRASILEIRA" %}
             </div>  
         </div>
         <div class="col-sm-5">                    
