--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -281,7 +281,7 @@
     <div class="col-sm-2">                    
         <div class="form-group" >                
             <label for="" >{{form.rep_nacionalidade.label}} </label>        
-            {% render_field form.rep_nacionalidade  class="form-control" %}
+            {% render_field form.rep_nacionalidade  class="form-control" value="BRASILEIRA" %}
         </div>    
     </div>  
     <div class="col-sm-2">                    
