--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -10,12 +10,12 @@
     <a href="{% url 'emprestimo:emprestimo_edit' object.pk %}" type="button" class="btn btn-info">Editar</a>
     <a href="{% url 'emprestimo:emprestimo_delete' object.pk %}" type="button" class="btn btn-danger">Deletar</a>
    
-    <div class="btn-group" role="group" >
-    {% if object.cliente %}
-        <a href="{% url 'emprestimo:emprestimo_impress' object.pk %}" type="button" class="btn btn-warning">Carnê</a>    
+    <div class="btn-group" role="group" >        
+    {% if object.cliente %}    
+        <a href="{% url 'emprestimo:emprestimo_impress' object.pk %}" target="_blank" type="button" class="btn btn-warning">Carnê</a>    
     {% endif %}
-        <a href="{% url 'emprestimo:emprestimo_promissoria' object.pk %}" type="button" class="btn btn-warning">Promissória</a>
-        <a href="{% url 'emprestimo:emprestimo_contrato' object.pk %}" type="button" class="btn btn-warning">Contrato</a>
+        <a href="{% url 'emprestimo:emprestimo_promissoria' object.pk %}" target="_blank" type="button" class="btn btn-warning">Promissória</a>
+        <a href="{% url 'emprestimo:emprestimo_contrato' object.pk %}" target="_blank" type="button" class="btn btn-warning">Contrato</a>
     </div>
 
     
@@ -64,8 +64,5 @@
         </tbody>
     </table>
 </div>
-
-
-
 
 {% endblock content %}
