--- a/projeto/cliente/templates/fiador_form.html
+++ b/projeto/cliente/templates/fiador_form.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-   <!-- https://www.schoolofnet.com/forum/topico/como-enviar-a-mensagem-de-sucesso-ou-erro-para-o-formulario-8495 -->    
+<!-- https://www.schoolofnet.com/forum/topico/como-enviar-a-mensagem-de-sucesso-ou-erro-para-o-formulario-8495 -->    
 <div class="row" >
     <div class="col-sm-12">
         <div class="tab">
@@ -17,10 +17,10 @@
     
 <div id="Page1" class="tabcontent" style="display:block">
     <form method="POST">
-        {% csrf_token %}
-        <br>
-        <h3>CADASTRO DE FIADOR</h3>
-        <hr/>
+    {% csrf_token %}
+    <br>
+    <h3>CADASTRO DE FIADOR</h3>
+    <hr/>
         <div class="row" >
             <div class="col-sm-6">                    
                 <div class="form-group" >                
@@ -236,7 +236,13 @@
                     <label for="" >{{form.rua_trabalho.label}} </label>        
                     {% render_field form.rua_trabalho class="form-control"  %}
                 </div>
-            </div>               
+            </div>         
+            <div class="col-sm-1">                    
+                <div class="form-group" >                
+                    <label for="" class="required">{{form.numero_casa_trabalho.label}} </label>        
+                    {% render_field form.numero_casa_trabalho class="form-control" type="text" size="60" %}
+                </div>
+            </div>      
             <div class="col-sm-4">                    
                 <div class="form-group" >                
                     <label for="" >{{form.bairro_trabalho.label}} </label>        
