Obrigatoriedade de numero de casa padronizado

--- a/projeto/cliente/templates/fiador_form.html
+++ b/projeto/cliente/templates/fiador_form.html
@@ -116,7 +116,7 @@
             </div>
             <div class="col-sm-1">                    
                 <div class="form-group" >                
-                    <label for="" class="required">{{form.numero_casa.label}} </label>        
+                    <label for="" >{{form.numero_casa.label}} </label>        
                     {% render_field form.numero_casa class="form-control" name="rua" type="text" id="rua" size="60" %}
                 </div>
             </div>
@@ -239,7 +239,7 @@
             </div>         
             <div class="col-sm-1">                    
                 <div class="form-group" >                
-                    <label for="" class="required">{{form.numero_casa_trabalho.label}} </label>        
+                    <label for="" >{{form.numero_casa_trabalho.label}} </label>        
                     {% render_field form.numero_casa_trabalho class="form-control" type="text" size="60" %}
                 </div>
             </div>      
