--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -87,13 +87,13 @@
     <button  onclick="somar()" class="btn btn-info">Calcular Parcela</button>
     {% endif %}
 
-<script>
-    
+<script>    
+    //VERIFICAR A FUNCIONALIDADE DESSE SCRIPT
     function toFixed(num, fixed) {
         var re = new RegExp('^-?\\d+(?:\.\\d{0,' + (fixed || -1) + '})?');
         return num.toString().match(re)[0];
-    }
-        
+    }            
+    //CALCULA AS PARCELAS E TAXAS DO EMPRÉSTIMO
     function somar(){
         var tvalor_emprestado  = document.getElementById('valor_emprestado')
         var tqtd_parcelas      = document.getElementById('qtd_parcelas')
@@ -112,27 +112,27 @@
         var qtd_dias           = 0
         var iof_adicional      = 0.0038   
 
-    //CALCULA O IOF_INICIAL (1º PASSO)
-    for (var i = 0 ; i < qtd_parcelas; i++){
-        if(mes_num == 1 || mes_num == 3 || mes_num == 5 || mes_num == 7 || mes_num == 8 || mes_num == 10 || mes_num == 12){
-            qtd_dias += 31
-        }else{
-            qtd_dias +=30
-        }
-        mes_num+=1
-        if(mes_num == 13){
-            mes_num = 1
-        }        
-        iof_inicial += ((principal*(qtd_dias*0.0041))/100)         
-        iof_inicial += principal*iof_adicional
-        iof_inicial = Number(toFixed(iof_inicial, 2))        
-    }    
+        //CALCULA O IOF_INICIAL (1º PASSO)
+        for (var i = 0 ; i < qtd_parcelas; i++){
+            if(mes_num == 1 || mes_num == 3 || mes_num == 5 || mes_num == 7 || mes_num == 8 || mes_num == 10 || mes_num == 12){
+                qtd_dias += 31
+            }else{
+                qtd_dias +=30
+            }
+            mes_num+=1
+            if(mes_num == 13){
+                mes_num = 1
+            }        
+            iof_inicial += ((principal*(qtd_dias*0.0041))/100)         
+            iof_inicial += principal*iof_adicional
+            iof_inicial = Number(toFixed(iof_inicial, 2))        
+        }    
 
-    //CALCULA O IOF_REAL (2º PASSO)   
+        //CALCULA O IOF_REAL (2º PASSO)   
         var iof_real = 0
         iof_real = (valor_emprestado*iof_inicial)/(valor_emprestado-iof_inicial)           
 
-    //CALCULA O VALOR DA PARCELA(3º PASSO)
+        //CALCULA O VALOR DA PARCELA(3º PASSO)
         var valor_emprestado   = Number(tvalor_emprestado.value)                
         var qtd_parcelas       = Number(tqtd_parcelas.value)
         var prestacao          = Number(tprestacao.value)
@@ -141,10 +141,30 @@
         valor_parcela = (cap_iof*(1+(qtd_parcelas*9.5)/100))/qtd_parcelas
         valor_parcela = String(toFixed(valor_parcela, 2))  
 
-    document.getElementById('prestacao').value = valor_parcela
-  
-
+        document.getElementById('prestacao').value = valor_parcela
     }
+
+    //GERA UM NUMERO SEQUENCIAL BASEADO NA DATA E HORA ATUAL
+
+    var dt=new Date()  
+
+    var ano=String(dt.getFullYear())
+    var mes=String(dt.getMonth()+1)
+    var dia=String(dt.getDate())
+    var hora=String(dt.getHours())
+    var minutos=String(dt.getMinutes())
+
+    var sequencia = ano
+    var sequencia = sequencia+mes
+    if(dia<10){
+        sequencia += '0'
+    }
+    var sequencia = sequencia+dia        
+    var sequencia = sequencia+hora        
+    var sequencia = sequencia+minutos        
+    document.write(sequencia)
+    
+       
 </script>
   
     
