--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -154,10 +154,7 @@ window.onload = function imprimir(){
         var qtd_parcelas       = Number({{object.qtd_parcelas}})
         var prestacao          = Number({{object.valor_prestacao}})
 
-
-
-
-                        
+        var n_contrato         = Number({{object.n_contrato}})
         
         var principal          = valor_emprestado/qtd_parcelas         
     
@@ -608,7 +605,7 @@ window.onload = function imprimir(){
 
         <div class="num_contrato" > 
             <strong> Nº DO CONTRATO </strong> <br>
-            &nbsp
+            ${n_contrato}
         </div>
         <br>
         <div class="credito" >
