--- a/projeto/emprestimo/templates/emprestimo_list.html
+++ b/projeto/emprestimo/templates/emprestimo_list.html
@@ -16,7 +16,7 @@
             <thead class="thead">
                 <tr>
                     <th>cliente</th>                    
-                    <th>num_doc</th>                    
+                    <th>n_contrato</th>                    
                     <th>valor_emprestado</th>                    
                     <th>qtd_parcelas</th>  
                     <th>Data do Emprestimo</th>  
@@ -31,7 +31,7 @@
                 {% else %}
                     <td style="text-align:left">{{ object.cliente_cnpj }}(CNPJ)</td>
                 {% endif %}
-                    <td style="text-align:center">{{ object.num_doc }}</td>
+                    <td style="text-align:center">{{ object.n_contrato }}</td>
                     <td style="text-align:center">{{ object.valor_emprestado }}</td>
                     <td style="text-align:center">{{ object.qtd_parcelas }}x</td>  
                     <td style="text-align:center">{{ object.data_emprestimo|date:"d/m/Y" }}</td>  
