Numero de contrato na tea de detail emprestimo

--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -29,7 +29,7 @@
                 <td>{{ object.funcionario }}</td>
             </tr>
             <tr>
-                <th class="text-right">Nº Documento</th>
+                <th class="text-right">Nº Contrato</th>
                 <td>{{ object.n_contrato }}</td>
             </tr>
             {% if object.cliente %}
