Correção de texto no carnê

--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -585,7 +585,7 @@
 					</td>
 					<td width="1px"></td>
 					<td colspan="5" rowspan="4">
-						<span class="title2">&nbsp <b>INTRUÇÕES:<br/><br/>
+						<span class="title2">&nbsp <b>INSTRUÇÕES:<br/><br/>
 						&nbsp <b>MULTA DE R$: ${valor_multa} APÓS: ${dia}/${meses[mes-1]}/${ano}<br/>
 						&nbsp JUROS DE R$: ${valor_juros_dia} AO DIA<br/></b>
 						</span>				
